Round shape fixed for team members photo. little change in size and alignment of image is made

--- a/public/styles.css
+++ b/public/styles.css
@@ -651,6 +651,17 @@ video {
   /* transform: rotate(90deg); */
 }
 
+.team-img{
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .card-animate{
   animation: card-load 800ms ease-out;
   animation-delay: 100ms;
@@ -783,8 +794,8 @@ input[type=number] {
   margin-bottom: 1.5rem;
 }
 
-.mb-24 {
-  margin-bottom: 6rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
 .mb-4 {
@@ -837,6 +848,10 @@ input[type=number] {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
 }
 
 .block {
@@ -907,15 +922,11 @@ input[type=number] {
   width: 15rem;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
-}
-
-.w-full {
+.w-\[100\%\] {
   width: 100%;
 }
 
-.w-\[100\%\] {
+.w-full {
   width: 100%;
 }
 
@@ -994,6 +1005,12 @@ input[type=number] {
   row-gap: 2.5rem;
 }
 
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-20 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(5rem * var(--tw-space-x-reverse));
@@ -1010,6 +1027,12 @@ input[type=number] {
   --tw-space-x-reverse: 0;
   margin-right: calc(18rem * var(--tw-space-x-reverse));
   margin-left: calc(18rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-center {
@@ -1040,8 +1063,8 @@ input[type=number] {
   border-radius: 40px;
 }
 
-.rounded-full {
-  border-radius: 9999px;
+.rounded-\[50\%\] {
+  border-radius: 50%;
 }
 
 .rounded-lg {
@@ -1127,6 +1150,11 @@ input[type=number] {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .px-3 {
@@ -1378,6 +1406,8 @@ input[type=number] {
   }
 }
 
+/* our team  */
+
 /* our course card animation on scroll */
 
 /* remove arrow from number input */
@@ -1557,6 +1587,10 @@ input[type=number] {
     margin-bottom: 2rem;
   }
 
+  .lg\:ml-20 {
+    margin-left: 5rem;
+  }
+
   .lg\:inline {
     display: inline;
   }
@@ -1569,8 +1603,8 @@ input[type=number] {
     width: 33.333333%;
   }
 
-  .lg\:w-\[60\%\] {
-    width: 60%;
+  .lg\:w-\[50\%\] {
+    width: 50%;
   }
 
   .lg\:grid-cols-2 {
@@ -1579,6 +1613,12 @@ input[type=number] {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:space-x-20 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(5rem * var(--tw-space-x-reverse));
+    margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:border-b-\[1px\] {
